--- a/src/templates/actor/parts/psychic/parts/psychic-shields.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-shields.hbs
@@ -28,6 +28,7 @@
           inputName=(concat "system.dynamic.psychicShields." this._id ".system.shieldPoints.value")
           inputValue=this.system.shieldPoints.value
           hasSecondaryInput=true
+          disableSecondaryInput=true
           secondaryInputName=(concat "system.dynamic.psychicShields." this._id ".system.shieldPoints.maintainMax")
           secondaryInputValue=this.system.shieldPoints.maintainMax
         }}
