--- a/src/templates/actor/parts/mystic/parts/innate-magic.hbs
+++ b/src/templates/actor/parts/mystic/parts/innate-magic.hbs
@@ -1,26 +1,40 @@
 {{#> "systems/animabf/templates/common/ui/group.hbs"
-  class="innate-magic"
+  class="innate-magic-vias"
 }}
   {{>
   "systems/animabf/templates/common/ui/group-header.hbs"
     title=(localize "anima.ui.mystic.innateMagic.title")
   }}
   {{#> "systems/animabf/templates/common/ui/group-body.hbs"
-    class="innate-magic"
+    class="innate-magic-vias"
   }}
     {{>
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
       class="main"
       title=(localize "anima.ui.mystic.innateMagic.main.title")
-      inputName="system.mystic.innateMagic.main.value"
-      inputValue=system.mystic.innateMagic.main.value
+      inputName="system.mystic.innateMagic.main.base.value"
+      inputValue=system.mystic.innateMagic.main.base.value
+      hasSecondaryInput=true
+      addTooltips=true
+      disableSecondaryInput=true
+      secondaryInputName="system.mystic.innateMagic.main.final.value"
+      secondaryInputValue=system.mystic.innateMagic.main.final.value
     }}
-    {{>
-    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-      class="alternative"
-      title=(localize "anima.ui.mystic.innateMagic.alternative.title")
-      inputName="system.mystic.innateMagic.alternative.value"
-      inputValue=system.mystic.innateMagic.alternative.value
-    }}
+    {{#each system.mystic.innateMagic.via as |innateMagicVia|}}
+      <div data-item-id='{{this._id}}' class='innate-magic-via-row'>
+        {{>
+        "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+          class="via"
+          title=(localize (concat 'anima.ui.mystic.spell.via.' this.name '.title'))
+          inputName=(concat "system.dynamic.via." this._id ".system.base.value")
+          inputValue=this.system.base.value
+          hasSecondaryInput=true
+          addTooltips=true
+          disableSecondaryInput=false
+          secondaryInputName=(concat "system.dynamic.via." this._id ".system.final.value")
+          secondaryInputValue=this.system.final.value
+        }}
+      </div>
+    {{/each}}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
