--- a/src/templates/actor/parts/mystic/parts/mystic-shields.hbs
+++ b/src/templates/actor/parts/mystic/parts/mystic-shields.hbs
@@ -16,9 +16,10 @@
           class="name"
           title=(localize "anima.ui.mystic.mysticShields.name.title")
           hideTitle=(is "gt" @index 0)
+          disabled=true
           inputType="text"
           inputName=(concat "system.dynamic.mysticShields." this._id ".name")
-          inputValue=this.name
+          inputValue=(concat this.name " - " (localize (concat 'dialogs.spellGrade.' this.system.grade.value '.title')))
         }}
         {{>
         "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
@@ -27,15 +28,6 @@
           hideTitle=(is "gt" @index 0)
           inputName=(concat "system.dynamic.mysticShields." this._id ".system.shieldPoints.value")
           inputValue=this.system.shieldPoints.value
-        }}
-      </div>
-      <div data-item-id='{{this._id}}' class='mystic-shield-row'>
-        {{>
-        "systems/animabf/templates/common/ui/custom-select-choices.hbs"
-          class="grade"
-          choices=xRoot.config.iterables.mystic.spellGrades
-          inputName=(concat "system.dynamic.mysticShields." this._id ".system.grade.value")
-          inputValue=this.system.grade.value
         }}
       </div>
     {{/each}}
