--- a/src/templates/actor/parts/psychic/parts/psychic-shields.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-shields.hbs
@@ -16,6 +16,7 @@
           class="name"
           title=(localize "anima.ui.psychic.psychicShields.name.title")
           hideTitle=(is "gt" @index 0)
+          disabled=true
           inputType="text"
           inputName=(concat "system.dynamic.psychicShields." this._id ".name")
           inputValue=this.name
