--- a/src/scss/items/items-sheet.scss
+++ b/src/scss/items/items-sheet.scss
@@ -4,4 +4,5 @@
 @import './ammo/ammo.scss';
 @import './armor/armor.scss';
 @import './spell/spell.scss';
+@import './summon/summon.scss';
 @import './psychic-power/psychic-power.scss';
