--- a/src/templates/dialog/combat/gm-combat-dialog.hbs
+++ b/src/templates/dialog/combat/gm-combat-dialog.hbs
@@ -597,9 +597,15 @@
                 {{localize 'macros.combat.dialog.rollResistanceButton.title'}}
               </button>
           {{/if}}
+          {{#if this.ui.characteristicRoll}}
+              <button title='{{localize 'macros.combat.dialog.rollCharacteristicButtonTooltip.title'}}'
+                      class='abf-button roll-characteristic'>
+                {{localize 'macros.combat.dialog.rollCharacteristicButton.title'}}
+              </button>
+          {{/if}}
           {{#if
             (or (is 'gt' this.calculations.damage 0) (is 'gt' this.defender.result.values.fatigue 0) (is 'gt' this.attacker.result.values.fatigueUsed 0))}}
-            {{#unless this.ui.resistanceRoll}}
+            {{#unless (or this.ui.resistanceRoll this.ui.characteristicRoll)}}
             <button title='{{localize 'macros.combat.dialog.applyAndCloseButtonTooltip.title'}}'
                     class='abf-button apply-values'>
               {{localize 'macros.combat.dialog.applyAndCloseButton.title'}}
