--- a/src/templates/dialog/combat/gm-combat-dialog.hbs
+++ b/src/templates/dialog/combat/gm-combat-dialog.hbs
@@ -483,7 +483,13 @@
               {{localize 'macros.combat.dialog.rollResistanceButton.title'}}
             </button>
           {{/if}}
-          {{#unless this.ui.resistanceRoll}}
+          {{#if this.ui.characteristicRoll}}
+              <button title='{{localize 'macros.combat.dialog.rollCharacteristicButtonTooltip.title'}}'
+                      class='abf-button roll-characteristic'>
+                {{localize 'macros.combat.dialog.rollCharacteristicButton.title'}}
+              </button>
+          {{/if}}
+          {{#unless (or this.ui.resistanceRoll this.ui.characteristicRoll)}}
             <button title='{{localize 'macros.combat.dialog.applyAndCloseButtonTooltip.title'}}'
                     class='abf-button apply-values'>
               {{localize 'macros.combat.dialog.applyAndCloseButton.title'}}
