--- a/src/templates/dialog/combat/gm-combat-dialog.hbs
+++ b/src/templates/dialog/combat/gm-combat-dialog.hbs
@@ -591,7 +591,7 @@
               </button>
             {{/unless}}
           {{/if}}
-          {{#if this.attacker.result.values.checkResistance}}
+          {{#if this.ui.resistanceRoll}}
               <button title='{{localize 'macros.combat.dialog.rollResistanceButtonTooltip.title'}}'
                       class='abf-button roll-resistance'>
                 {{localize 'macros.combat.dialog.rollResistanceButton.title'}}
@@ -599,7 +599,7 @@
           {{/if}}
           {{#if
             (or (is 'gt' this.calculations.damage 0) (is 'gt' this.defender.result.values.fatigue 0) (is 'gt' this.attacker.result.values.fatigueUsed 0))}}
-            {{#unless this.attacker.result.values.checkResistance}}
+            {{#unless this.ui.resistanceRoll}}
             <button title='{{localize 'macros.combat.dialog.applyAndCloseButtonTooltip.title'}}'
                     class='abf-button apply-values'>
               {{localize 'macros.combat.dialog.applyAndCloseButton.title'}}
