--- a/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
@@ -3,8 +3,8 @@
 "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
   title=(localize "macros.combat.dialog.zeonAccumulated.title")
   disabled=true
-  inputName="defender.mystic.zeonAccumulated"
-  inputValue=this.defender.mystic.zeonAccumulated
+  inputName="defender.mystic.spellCasting.zeonAccumulated"
+  inputValue=this.defender.mystic.spellCasting.zeonAccumulated
 }}
 {{/if}}
 
@@ -47,7 +47,7 @@
   <option {{#if (is "eq" this.defender.mystic.spellGrade 'arcane')}}selected{{/if}} value='arcane'>{{localize 'macros.combat.dialog.spellGrade.arcane.title'}}</option>
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
-{{#if this.defender.mystic.spellInnate}}
+{{#if this.defender.mystic.spellCasting.spell.innate}}
 <div class='columns'>
   <div>
     {{>
@@ -55,14 +55,14 @@
     title=(localize 'macros.combat.dialog.castInnate.title')
     disabled=this.defenseSent
     inputType="checkbox"
-    inputName="defender.mystic.castInnate"
-    inputValue=(is 'eq' this.defender.mystic.castInnate true)
+    inputName="defender.mystic.spellCasting.cast.innate"
+    inputValue=(is 'eq' this.defender.mystic.spellCasting.cast.innate true)
     }}
   </div>
 </div>
 {{/if}}
 
-{{#if this.defender.mystic.spellPrepared}}
+{{#if this.defender.mystic.spellCasting.spell.prepared}}
 <div class='columns'>
   <div>
     {{>
@@ -70,8 +70,8 @@
     title=(localize 'macros.combat.dialog.castPrepared.title')
     disabled=this.defenseSent
     inputType="checkbox"
-    inputName="defender.mystic.castPrepared"
-    inputValue=(is 'eq' this.defender.mystic.castPrepared true)
+    inputName="defender.mystic.spellCasting.cast.prepared"
+    inputValue=(is 'eq' this.defender.mystic.spellCasting.cast.prepared true)
     }}
   </div>
 </div>
@@ -107,6 +107,21 @@
     }}
   </div>
 </div>
+
+{{#if this.defender.mystic.spellCasting.override.ui}}
+<div class='columns'>
+  <div>
+    {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+    title=(localize 'macros.combat.dialog.castOverride.title')
+    disabled=this.attackSent
+    inputType="checkbox"
+    inputName="defender.mystic.spellCasting.override.value"
+    inputValue=(is 'eq' this.defender.mystic.spellCasting.override.value true)
+    }}
+  </div>
+</div>
+{{/if}}
 
 {{#if this.defenseSent}}
   <div class='defense-sent'>
