--- a/src/templates/dialog/new-mystic-shield.hbs
+++ b/src/templates/dialog/new-mystic-shield.hbs
@@ -19,28 +19,16 @@
       <option {{#if (is "eq" data.mystic.spellGrade 'advanced')}}selected{{/if}} value='advanced'>{{localize 'dialogs.spellGrade.advanced.title'}}</option>
       <option {{#if (is "eq" data.mystic.spellGrade 'arcane')}}selected{{/if}} value='arcane'>{{localize 'dialogs.spellGrade.arcane.title'}}</option>
     {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+
+    {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+      title=(localize 'dialogs.castSpell.title')
+      inputName='new.mysticShield.castSpell'
+    }}
+      <option value='accumulated'>{{localize 'dialogs.castSpell.accumulated.title'}}</option>
+      <option value='prepared'>{{localize 'dialogs.castSpell.prepared.title'}}</option>
+      <option value='innate'>{{localize 'dialogs.castSpell.innate.title'}}</option>
+      <option {{#if (is "eq" data.mystic.castOverride true)}}selected{{/if}} value='override'>{{localize 'dialogs.castSpell.override.title'}}</option>
+    {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
     </div>
   </div>
-<div class='columns'>
-  <div>
-    {{>
-    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-    title=(localize 'macros.combat.dialog.castInnate.title')
-    inputType="checkbox"
-    inputName="new.mysticShield.castInnate"
-    inputValue=(is 'eq' data.mystic.castInnate true)
-    }}
-  </div>
-</div>
-<div class='columns'>
-  <div>
-    {{>
-    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
-    title=(localize 'macros.combat.dialog.castPrepared.title')
-    inputType="checkbox"
-    inputName="new.mysticShield.castPrepared"
-    inputValue=(is 'eq' data.mystic.castPrepared true)
-    }}
-  </div>
-</div>
 </form>
