--- a/src/scss/dialog/combat-attack-dialog.scss
+++ b/src/scss/dialog/combat-attack-dialog.scss
@@ -93,5 +93,9 @@
       justify-content: space-between;
       align-items: center;
     }
+
+    .hr {
+      border-bottom: 1px solid $red;
+    }
   }
 }
