--- a/src/templates/dialog/combat/combat-attack/parts/combat.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/combat.hbs
@@ -84,7 +84,31 @@
   {{/each}}
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
-{{#if (and (is 'neq' this.attacker.combat.specificAttack.value 'none') (is 'neq' this.attacker.combat.specificAttack.value 'disarm'))}}
+{{#if (is 'eq' this.attacker.combat.specificAttack.value 'targeted')}}
+{{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+  title=(localize 'macros.combat.dialog.targetedAttack.title')
+  disabled=this.attackSent
+  inputName='attacker.combat.specificAttack.targeted'
+}}
+  {{#each this.attacker.targetedAttacks}}
+    <option {{#if (is "eq" ../this.attacker.combat.specificAttack.targeted this.bodyPart)}}selected{{/if}} value='{{this.bodyPart}}'>{{localize (concat 'macros.combat.dialog.targetedAttack.' this.bodyPart '.title')}}</option>
+  {{/each}}
+{{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+{{/if}}
+
+{{#if (is 'eq' this.attacker.combat.specificAttack.value 'disable')}}
+{{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+  title=(localize 'macros.combat.dialog.targetedAttack.title')
+  disabled=this.attackSent
+  inputName='attacker.combat.specificAttack.targeted'
+}}
+  {{#each_when this.attacker.targetedAttacks "bodyPart" "" "" "none|elbow|foot|hand|knee|arm|thigh|calf|wrist"}}
+    <option {{#if (is "eq" ../this.attacker.combat.specificAttack.targeted this.bodyPart)}}selected{{/if}} value='{{this.bodyPart}}'>{{localize (concat 'macros.combat.dialog.targetedAttack.' this.bodyPart '.title')}}</option>
+  {{/each_when}}
+{{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+{{/if}}
+
+{{#if (or (is 'eq' this.attacker.combat.specificAttack.value 'knockDown') (is 'eq' this.attacker.combat.specificAttack.value 'immobilize'))}}
 <div class='columns'>
   <div>
     {{>
