fix-psychic-projection

--- a/src/templates/dialog/combat/combat-defense/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/psychic.hbs
@@ -10,8 +10,8 @@
 "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
   title=(localize 'macros.combat.dialog.psychicProjection.title')
   disabled=this.defenseSent
-  inputName="defender.psychic.psychicProjection"
-  inputValue=this.defender.psychic.psychicProjection
+  inputName="defender.psychic.psychicProjection.final"
+  inputValue=this.defender.psychic.psychicProjection.final
 }}
 
 {{#if this.defender.psychic.supernaturalShield.newShield}}
