--- a/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/psychic.hbs
@@ -10,8 +10,8 @@
 "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
   title=(localize 'macros.combat.dialog.psychicProjection.title')
   disabled=this.attackSent
-  inputName="attacker.psychic.psychicProjection"
-  inputValue=this.attacker.psychic.psychicProjection
+  inputName="attacker.psychic.psychicProjection.final"
+  inputValue=this.attacker.psychic.psychicProjection.final
 }}
 
 {{>
