--- a/src/templates/actor/parts/domine/parts/techniques.hbs
+++ b/src/templates/actor/parts/domine/parts/techniques.hbs
@@ -15,6 +15,9 @@
           class="technique"
           contractible=true
           contractibleItemId=technique._id
+          hasEffects=technique.system.activeEffect.hasEffects
+          effectsEnabled=technique.system.activeEffect.enabled
+          effectsItemId=technique._id
         }}
           {{#> "systems/animabf/templates/common/ui/group-header.hbs"}}
             <div class='technique-header'>
