UPDATED - Combat modifiers

--- a/src/templates/actor/parts/settings/settings.hbs
+++ b/src/templates/actor/parts/settings/settings.hbs
@@ -1,4 +1,5 @@
 <div class='settings'>
   {{> "systems/animabf/templates/actor/parts/settings/parts/tabVisibility.hbs"}}
   {{> "systems/animabf/templates/actor/parts/settings/parts/advancedSettings.hbs"}}
+  {{> "systems/animabf/templates/actor/parts/settings/parts/modifiers.hbs"}}
 </div>
