--- a/src/templates/actor/actor-sheet.hbs
+++ b/src/templates/actor/actor-sheet.hbs
@@ -14,6 +14,7 @@
       <a class="item" data-tab="domine">{{localize "anima.ui.tabs.domine"}}</a>{{/if}}
     {{#if system.ui.tabVisibility.psychic.value}}
       <a class="item" data-tab="psychic">{{localize "anima.ui.tabs.psychic"}}</a>{{/if}}
+    <a class="item" data-tab="effects">{{localize "anima.ui.tabs.effects"}}</a>
     <a class="item" data-tab="settings"><img src='/systems/animabf/assets/icons/game-icons.net/ffffff/lorc/cog.svg'></a>
   </nav>
 
@@ -40,6 +41,10 @@
 
     <div class="tab psychics" data-group="primary" data-tab="psychic">
       {{> "systems/animabf/templates/actor/parts/psychic/psychic.hbs"}}
+    </div>
+
+    <div class="tab effects" data-group="primary" data-tab="effects">
+      {{> "systems/animabf/templates/actor/parts/effects/effects.hbs"}}
     </div>
 
     <div class="tab settings" data-group="primary" data-tab="settings">
