--- a/src/templates/items/technique/technique.hbs
+++ b/src/templates/items/technique/technique.hbs
@@ -30,7 +30,7 @@
         </div>
     <table class="item-list effects-list">
         <tr>
-            <th>Effect</th>
+            <th>{{localize "anima.ui.effects.effectsList.name.title"}}</th>
             <th>
                 <a class="effect-control" data-action="create">
                     <i class="fas fa-plus"></i>
@@ -43,10 +43,10 @@
                 <h4>{{effect.name}}</h4>
             </td>
             <td class="effect-controls">
-                <a class="effect-control" data-action="edit" title="Edit">
+                <a class="effect-control" data-action="edit" title="{{localize "anima.ui.effects.effectsList.edit.title"}}">
                     <i class="fas fa-edit"></i>
                 </a>
-                <a class="effect-control" data-action="delete" title="Delete">
+                <a class="effect-control" data-action="delete" title="{{localize "anima.ui.effects.effectsList.delete.title"}}">
                     <i class="fas fa-trash"></i>
                 </a>
             </td>
